[package]
name = "barragoon-engine"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.26.3"
strum_macros = "0.26.4"


[dev-dependencies]
cargo-llvm-cov = "0.6.11"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
enum_glob_use = "deny"
unwrap_used = "deny"
